--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,7 +54,7 @@ jobs:
             type=raw,value=${{ env.docker_tag }}
             type=raw,value=latest,enable=${{ github.event_name == 'release' }}
 
-      - name: Build and push release images
+      - name: Build and push images
         uses: docker/build-push-action@v4
         with:
           context: .
