Specify schedlib version in requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ gunicorn
 numpy
 pyyaml
 pandas
-schedlib @ git+https://github.com/simonsobs/scheduler.git@main
+schedlib @ git+https://github.com/simonsobs/scheduler.git@v0.1.0
