remove old policy handlers and add rest handler

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ gunicorn
 numpy
 pyyaml
 pandas
-schedlib @ git+https://github.com/simonsobs/scheduler.git@v0.1.0
+schedlib @ git+https://github.com/simonsobs/scheduler.git@yilun/dev
+python-dotenv
+requests
